--- a/themes/Adwaita/gtk-3.0/gtk-main-common.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main-common.css
@@ -37,3 +37,38 @@
 @define-color osd_button_shadow alpha(black, 0.35);
 
 @define-color osd_trough_bg alpha(@osd_button_fg, 0.10);
+
+/*********************
+ * Error/Warning/... *
+ *********************/
+@define-color link_color #4a90d9;
+@define-color warning_color #f57900;
+@define-color error_color #cc0000;
+@define-color success_color #4e9a06;
+
+@define-color info_fg_color black;
+@define-color info_text_shadow alpha(black, 0.1);
+@define-color info_bg_color rgb (252, 252, 189);
+@define-color warning_fg_color black;
+@define-color warning_text_shadow alpha(black, 0.1);
+@define-color warning_bg_color rgb (250, 173, 61);
+@define-color question_fg_color white;
+@define-color question_text_shadow alpha(black, 0.5);
+@define-color question_bg_color rgb (138, 173, 212);
+@define-color error_fg_color white;
+@define-color error_text_shadow alpha(black, 0.5);
+@define-color error_bg_color rgb (237, 54, 54);
+
+/*****************
+ * Fallback Mode *
+ *****************/
+@define-color os_chrome_bg_color black;
+@define-color os_chrome_fg_color #ccc;
+@define-color os_chrome_selected_bg_color #333;
+@define-color os_chrome_selected_fg_color white;
+
+/************
+ * Tooltips *
+ ************/
+@define-color theme_tooltip_bg_color #212526;
+@define-color theme_tooltip_fg_color #ffffff;
