--- a/themes/Adwaita/gtk-3.0/gtk-main-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main-dark.css
@@ -30,9 +30,6 @@
 @define-color menu_combobox_border darker (@theme_selected_bg_color);
 @define-color menu_separator mix (@menu_fg_color, @menu_bg_color, 0.95);
 
-@define-color theme_tooltip_bg_color #000000;
-@define-color theme_tooltip_fg_color #eeeeee;
-
 @define-color button_gradient_color_a shade (@theme_bg_color, 1.15);
 @define-color button_gradient_color_b @theme_bg_color;
 @define-color button_gradient_color_c shade (@theme_bg_color, 0.8);
@@ -139,40 +136,13 @@
 @define-color treeview_focus_border shade (@theme_selected_bg_color, 1.20);
 
 @define-color scale_fill shade (@insensitive_borders, 0.90);
+@define-color scale_progress_fill #2c85e2;
 @define-color scale_border_a shade (@internal_element_color, 0.90);
 @define-color scale_border_b shade (@internal_element_color, 0.65);
 
-/* FIXME: needs dark colors from here */
-@define-color link_color #4a90d9;
-@define-color warning_color #f57900;
-@define-color error_color #cc0000;
-@define-color success_color #4e9a06;
-
-@define-color info_fg_color black;
-@define-color info_text_shadow alpha(black, 0.1);
-@define-color info_bg_color rgb (252, 252, 189);
-@define-color warning_fg_color black;
-@define-color warning_text_shadow alpha(black, 0.1);
-@define-color warning_bg_color rgb (250, 173, 61);
-@define-color question_fg_color white;
-@define-color question_text_shadow alpha(black, 0.5);
-@define-color question_bg_color rgb (138, 173, 212);
-@define-color error_fg_color white;
-@define-color error_text_shadow alpha(black, 0.5);
-@define-color error_bg_color rgb (237, 54, 54);
-
-@define-color os_chrome_bg_color black;
-@define-color os_chrome_fg_color #ccc;
-@define-color os_chrome_selected_bg_color #333;
-@define-color os_chrome_selected_fg_color white;
-
-@define-color chrome_bg_color #1e1a17;
-@define-color chrome_fg_color #fff;
-
-@define-color scale_progress_fill #2c85e2;
-@define-color scale_progress_border #1864b2;
-@define-color scale_progress_border_b #3e90e5;
-
+/******
+ * WM *
+ ******/
 @define-color wm_title @theme_fg_color;
 @define-color wm_unfocused_title @theme_unfocused_fg_color;
 @define-color wm_highlight shade(@theme_bg_color, 1.4);
@@ -201,6 +171,5 @@
 @import url("gtk-widgets-borders-dark.css");
 @import url("gtk-widgets-assets-dark.css");
 @import url("gtk-widgets.css");
-/* @import url("gtk-scrollbar-experiments.css"); */
 @import url("gtk-widgets-dark-overrides.css");
 @import url("gnome-applications.css");
