--- a/themes/Adwaita/gtk-3.0/gtk-main.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main.css
@@ -1,13 +1,10 @@
 /* Default color scheme */
 @define-color base_color #ffffff;
 @define-color bg_color #ededed;
-@define-color tooltip_bg_color #212526;
 @define-color selected_bg_color #4a90d9;
 @define-color text_color #2e3436;
 @define-color fg_color #2e3436;
-@define-color tooltip_fg_color #ffffff;
 @define-color selected_fg_color #ffffff;
-/*@define-color unfocused_bg_color #f8f8f8;*/
 @define-color unfocused_bg_color @bg_color;
 
 /* Colormap actually used by the theme, to be overridden in other css files */
@@ -15,8 +12,6 @@
 @define-color theme_text_color @text_color;
 @define-color theme_bg_color @bg_color;
 @define-color theme_fg_color @fg_color;
-@define-color theme_tooltip_bg_color @tooltip_bg_color;
-@define-color theme_tooltip_fg_color @tooltip_fg_color;
 @define-color theme_selected_bg_color @selected_bg_color;
 @define-color theme_selected_fg_color @selected_fg_color;
 
@@ -43,40 +38,14 @@
 @define-color menu_combobox_border #3277bf;
 @define-color menu_separator mix (@menu_fg_color, @menu_bg_color, 0.9);
 
-@define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
 @define-color inactive_frame_color #c7ccc1;
-@define-color warning_color #f57900;
-@define-color error_color #cc0000;
-@define-color success_color #4e9a06;
-
-@define-color info_fg_color black;
-@define-color info_text_shadow alpha(black, 0.1);
-@define-color info_bg_color rgb (252, 252, 189);
-@define-color warning_fg_color black;
-@define-color warning_text_shadow alpha(black, 0.1);
-@define-color warning_bg_color rgb (250, 173, 61);
-@define-color question_fg_color white;
-@define-color question_text_shadow alpha(black, 0.5);
-@define-color question_bg_color rgb (138, 173, 212);
-@define-color error_fg_color white;
-@define-color error_text_shadow alpha(black, 0.5);
-@define-color error_bg_color rgb (237, 54, 54);
 
 @define-color keyboard_focus_border_a #a2c9f1;
 @define-color keyboard_focus_border_b #6794cf;
 
-/* @define-color sidebar_bg_color shade (@theme_bg_color, 1.02); */
 @define-color sidebar_bg shade (@theme_bg_color, 1.025);
 @define-color sidebar_bg_unfocused mix(@sidebar_bg, @theme_unfocused_base_color, 0.5);
-
-@define-color os_chrome_bg_color black;
-@define-color os_chrome_fg_color #ccc;
-@define-color os_chrome_selected_bg_color #333;
-@define-color os_chrome_selected_fg_color white;
-
-@define-color chrome_bg_color #1e1a17;
-@define-color chrome_fg_color #fff;
 
 @define-color focused_entry_border #579eea;
 @define-color focused_entry_inset alpha (#d7e4f1, 0.50);
@@ -145,15 +114,12 @@
 
 @define-color internal_element_color #888a85;
 @define-color internal_element_prelight @theme_text_color;
-/*@define-color internal_element_insensitive shade (@internal_element_color, 1.7);*/
 @define-color internal_element_insensitive mix(@internal_element_color, @theme_base_color, 0.7);
 
 @define-color scale_fill @insensitive_borders;
 @define-color scale_border_a @internal_element_color;
 @define-color scale_border_b shade (@internal_element_color, 1.25);
 @define-color scale_progress_fill #2c85e2;
-@define-color scale_progress_border_a #1864b2;
-@define-color scale_progress_border_b #3e90e5;
 
 @define-color highlighted_border #8a8f8a;
 
@@ -163,16 +129,6 @@
 @define-color notebook_tab_gradient_a shade(@theme_bg_color, 0.97);
 @define-color notebook_tab_gradient_b shade(@theme_bg_color, 0.85);
 @define-color notebook_tab_hilight shade(@theme_bg_color, 1.02);
-
-/*@define-color toolbar_gradient_base #aaaa9e;
-@define-color toolbar_gradient_step1 #bcbcb4;
-@define-color toolbar_gradient_step2 #d9d9d7;
-@define-color toolbar_gradient_final #e5e5e2;*/
-
-/*@define-color toolbar_gradient_base shade(@toolbar_gradient_step2, 0.9);
-@define-color toolbar_gradient_step1 shade(@toolbar_gradient_step2, 0.95);
-@define-color toolbar_gradient_step2 #babdb6;
-@define-color toolbar_gradient_final shade(@toolbar_gradient_step2, 1.15);*/
 
 @define-color toolbar_gradient_a shade(@borders, 1.15);
 @define-color toolbar_gradient_b shade(@borders, 1.25);
@@ -195,6 +151,9 @@
 @define-color inset_light_color alpha(white, 0.45);
 @define-color inset_dark_color alpha(black, 0.07);
 
+/******
+ * WM *
+ ******/
 @define-color wm_title @theme_fg_color;
 @define-color wm_unfocused_title @theme_unfocused_fg_color;
 @define-color wm_highlight #ffffff;
