--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -80,12 +80,6 @@ GtkWindow:backdrop {
     border-color: @insensitive_borders;
 }
 
-/*
-*:active {
-    background-color: shade (@theme_bg_color, 0.915);
-}
-*/
-
 *:backdrop {
     /* I want everything nice and flat in the unfocused window */
     text-shadow: none;
@@ -1479,18 +1473,6 @@ GtkComboBox .button *:hover {
     color: mix(@scrollbar_slider_unfocused, @scrollbar_trough_unfocused, 0.7);
 }
 
-/* FIXME: disable until we have have an extra px padded towards the border. It feels uncentered now.
-.scrollbar.trough.vertical,
-.scrollbar.trough.vertical:backdrop {
-       box-shadow: -1 0 inset alpha(@theme_text_color, 0.05), 1 0 inset alpha(@theme_text_color, 0.1);
-}
-
-.scrollbar.trough.horizontal,
-.scrollbar.trough.horizontal:backdrop {
-   box-shadow: 0 -1 inset alpha(@theme_text_color, 0.05), 0 1 inset alpha(@theme_text_color, 0.1);
-}
-*/
-
 .scrollbar.trough:insensitive {
     background-color: @scrollbar_trough_insensitive;
     border-style: solid;
@@ -1651,10 +1633,14 @@ GtkTreeMenu .menuitem * {
 }
 
 .menu .menuitem:active,
+.menu .menuitem:hover {
+    background-color: @theme_selected_bg_color;
+}
+
+.menu .menuitem:active,
 .menu .menuitem *:active,
 .menu .menuitem:hover,
 .menu .menuitem *:hover {
-    background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 }
 
@@ -1783,7 +1769,6 @@ GtkCheckButton:selected:focus {
 .toolbar {
     border-style: none;
     border-color: darker (@theme_bg_color);
-/*    border-width: 1 0 1px 0; */
     padding: 4px;
 }
 
@@ -1799,10 +1784,6 @@ GtkCheckButton:selected:focus {
  * Menubar Toolbars *
  ********************/
 .toolbar.menubar {
-    /*background-image: -gtk-gradient (linear,
-                                     left top, left bottom,
-                                     from(@theme_bg_color),
-                                     to(shade(@theme_bg_color, 0.96)));*/
     border-style: none;
 
     -GtkToolbar-button-relief: normal;
@@ -2113,7 +2094,6 @@ GtkSwitch.slider {
     border-style: solid;
     border-color: mix (@borders, @theme_text_color, 0.4);
 
-    /*box-shadow: 0 -1 inset alpha(@theme_base_color, 0.50);*/
     box-shadow: inset 0 -1px alpha(white, 0.9), inset 0 1px @theme_base_color, inset 0 2px alpha(@borders, 0.15);
 
     padding: 2px 2px 3px 2px;
@@ -2241,8 +2221,6 @@ GtkTreeView:selected:focus {
 column-header.button,
 column-header .button {
     color: @internal_element_color;
-    /* I'd like to have shadows inside any white box, not possible yet */
-    /* box-shadow: 0 1 inset @entry_inset, 0 2 inset alpha(@entry_inset, 0.4); */
 }
 
 column-header.button,
